[tool.poetry]
authors = ["rawdaGastan <rawda.gastan@gmail.com>"]
description = ""
name = "grid3_client_py"
version = "0.1.0"

[tool.poetry.dependencies]
pytest = "7.1"
python = "^3.10"

[tool.poetry.dev-dependencies]
build = "^0.8.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
