[tool.poetry]
authors = ["rawdaGastan <rawda.gastan@gmail.com>"]
description = ""
name = "grid3_py"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pytest = "^7.2.0"
python = "^3.10"
substrateinterface = "^1.0.0"
substrate-interface = "^1.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
