[tool.poetry]
authors = ["rawdaGastan <rawda.gastan@gmail.com>"]
description = ""
name = "grid3_py"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
base58 = "^2.1.1"
ipaddress = "^1.0.23"
python = "^3.10"
requests = "^2.28.1"
substrate-interface = "^1.4.2"

[tool.poetry.dev-dependencies]
pipreqs = "^0.4.11"
pytest = "^7.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
